Fixed Scrollbar at bottom

--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -1,35 +1,15 @@
+@function vw-no-scrollbar($vw) {
+  @return $vw - ($vw - 100%);
+}
+
 body {
   font-family: sans-serif;
   margin: 0;
 }
 
-.header {
-  $content-size: 5vmin;
-
-  background: royalblue;
-  border-bottom: 0.1em solid darkblue;
-  margin: 0;
-  width: 100vw;
-  padding: 2vmin;
-
-  * {
-    display: inline-block;
-    margin: 0;
-    vertical-align: middle;
-  }
-
-  img {
-    height: $content-size;
-  }
-
-  h1 {
-    font-size: $content-size;
-  }
-}
-
 .map {
   height: 100vh;
-  width: 100vw;
+  width: vw-no-scrollbar(100vw);
   background-color: lightskyblue;
 }
 
